# wombot_seal_features_id

./: .gitignore  CMakeLists.txt  HaarCascade.py  README.md  README.txt  System_combo.py  haarcascade_bolt.xml  haarcascade_bolt_last.xml  haarcascade_holes.xml  package.xml  system_architecture.drawio  useful_contours.py
Cascade Trainer GUI/: components.xml  maintenancetool.ini
images/bolts/: neg.lst  pos.lst  pos_samples.vec
images/bolts/classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  (+7 more)
images/holes/: neg.lst  pos.lst  pos_samples.vec
launch/: cam_test.launch  cameras_rsc.launch  image_pub_sub.launch  pub_sub_test.launch  pub_sub_test2.launch  video_frames_pub_sub.launch
scripts/: fixture2_adaptThresh_detection.py  fixture2_contours_processed_detection.py  read_video.py  test_fixture2_contours_detection.py  useful_contours.py  useful_contours_roi.py  util.py  video_frame_capture.py  video_frame_capture_record.py
scripts/examples/: ball_detection.py  ball_tracking.py  ball_tracking_pub.py  ball_tracking_sub.py  contours_detection.py  contours_processing.py
scripts/fixture1_scripts/: fixture1_canny_detection.py  fixture1_canny_detection_v2.py  fixture1_encoding.py  fixture1_object_distance.py  video_frames_sub.py
scripts/gap_test_fixture_scripts/: edge_detection.py  image_encoding.py  key_value_list.py  key_value_test.py  test_fixture1_encoding.py  test_fixture1_sub.py  video_frames_pub.py  video_frames_sub.py
(+24 files in other folders)
